# spec

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  SPEC.md  agent-policy.json  docker-compose.yml  todays-readme.md
.github/workflows/: ci.yml  schema-validate.yml
docker/test-agent/: Dockerfile  test-agent.js
docs/: PHASE1_ACTION_LOG.md  PROJECT_OVERVIEW.md  REMAINING_WORK.md  STRATEGIC_ROADMAP.md  review-comments.md
docs/protocol/: pip_package_publish_instructions.md
examples/: README.md  ecommerce.json  healthcare.json  multi-protocol.json  news-publisher.json  open-data.json  personal-blog.json  restrictive.json  saas-api.json  wordpress-default.json
middleware/: agent-policy.json  index.express.js  index.js  package-lock.json  package.json
prompts/: apop_immediate_plan_prompt.md  apop_immediate_plan_prompt_v1.md  apop_strategic_roadmap.md
sdk/node/: README.md  package-lock.json  package.json  tsconfig.json
sdk/node/src/: discovery.ts  enforcer.ts  headers.ts  index.ts  matcher.ts  parser.ts  types.ts
sdk/node/tests/: discovery.test.ts  enforcer.test.ts  headers.test.ts  matcher.test.ts  middleware.test.ts  parser.test.ts
sdk/python/: README.md  pyproject.toml
sdk/python/src/apop/: __init__.py  discovery.py  enforcer.py  headers.py  matcher.py  parser.py  types.py
sdk/python/src/apop/middleware/: __init__.py  django.py  fastapi.py  flask.py
sdk/python/tests/: test_discovery.py  test_enforcer.py  test_headers.py  test_matcher.py  test_middleware_fastapi.py  test_middleware_flask.py  test_parser.py
spec/: README.md  agent-identification.md  discovery.md  http-extensions.md
spec/schema/: agent-policy.schema.json
tests/conformance/: .gitignore  README.md  helpers.js  package-lock.json  package.json  test-agent-headers.js  test-allowlist-denylist.js  test-discovery.js  test-intent-enforcement.js  test-path-matching.js  test-policy-parsing.js  test-rate-limiting.js  test-status-codes.js  test-verification.js  validate-examples.js  vitest.config.js
website/: .gitignore  README.md  next.config.ts  package.json  pnpm-lock.yaml  source.config.ts  vercel.json
website/.github/workflows/: ci.yml
website/.source/: browser.ts  server.ts  source.config.mjs
website/content/docs/: faq.mdx  (+2 more)
website/scripts/: sync-spec.ts
(+104 files in other folders)
