[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "apop"
version = "1.0.0"
description = "Agent Policy Protocol (APoP) SDK for Python — authorization & consent layer for the agentic web"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Arun Vijayarengan", email = "arun@superdom.ai" },
]
keywords = [
    "agent-policy",
    "apop",
    "ai-agents",
    "agentic-web",
    "authorization",
    "consent",
    "robotstxt",
    "mcp",
    "a2a",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "jsonschema>=4.20.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
fastapi = ["fastapi>=0.100.0", "starlette>=0.27.0"]
flask = ["flask>=2.3.0"]
django = ["django>=4.2"]
all = [
    "fastapi>=0.100.0",
    "starlette>=0.27.0",
    "flask>=2.3.0",
    "django>=4.2",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-httpx>=0.30.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "fastapi>=0.100.0",
    "starlette>=0.27.0",
    "flask>=2.3.0",
    "django>=4.2",
    "httpx>=0.25.0",
]

[project.urls]
Homepage = "https://github.com/ArunSuperdom/agent-policy-protocol"
Documentation = "https://agentpolicy.org"
Repository = "https://github.com/ArunSuperdom/agent-policy-protocol"
Issues = "https://github.com/ArunSuperdom/agent-policy-protocol/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/apop"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
